MD - Use real comboboxes in website settings popup.

In MD,
1. Hide borders (but leave focus border intact).
2. Move arrow closer to text instead of sizing based on widest option text.

Also fix bug where button focus borders depended on the --top-chrome-md flag even if they were in secondary UI. Thus with top chrome md enabled and secondary chrome md disabled, we get the normal pre-MD focus rects.

BUG=615308

Review-Url: https://codereview.chromium.org/2069733002
Cr-Commit-Position: refs/heads/master@{#401301}

Former-commit-id: 399800ecfbe6b923f0a2c64bd83d21d50a97d399