chrome/browser/ui/views/toolbar/app_menu_button.cc
@@ -43,10 +43,12 @@ AppMenuButton::AppMenuButton(ToolbarView* toolbar_view)
           extensions::FeatureSwitch::extension_action_redesign()->IsEnabled()),
       margin_trailing_(0),
       weak_factory_(this) {
-  if (ui::MaterialDesignController::IsModeMaterial())
+  if (ui::MaterialDesignController::IsModeMaterial()) {
     SetHasInkDrop(true);
-  else
+    SetFocusPainter(nullptr);
+  } else {
     icon_painter_.reset(new AppMenuIconPainter(this));
+  }
 }
 
 AppMenuButton::~AppMenuButton() {}
