chrome/browser/ui/views/website_settings/permissions_bubble_view.cc
@@ -132,7 +132,6 @@ void PermissionCombobox::OnMenuButtonClicked(views::MenuButton* source,
 
 void PermissionCombobox::PermissionChanged(
     const WebsiteSettingsUI::PermissionInfo& permission) {
-  LOG(ERROR) << "PermissionChanged!";
   SetText(model_->GetLabelAt(model_->GetIndexOfCommandId(permission.setting)));
   SizeToPreferredSize();
 
